 - TODO : manage when sftp submodule is not available => throw the right exception
 - TODO : add sudo support / with password prompt recognition...
 

------------------------------------------------------------------
0.9.11 (2013-07-xx) WORK IN PROGRESS

 - receiveNcompress was not using localbasename parameter with already compressed remote files.
 - sbt-eclipse 2.3.0
   
------------------------------------------------------------------
0.9.10 (2013-07-03)

 - DONE : add su support / with password prompt recognition...
    SSHShell.become method added, allow to become someoneelse.
    typical usage : from an ordinary user become the root user
 - SomeHelp class added in tests, in order to share common stuff.
 - various test classes enhancements
 - SSHShell timeout on current command (send ^C to break current processing and give back the prompt)
 - exit code accessible through a new method named executeWithStatus (thanks Alex Biehl for the suggestion)
 - SSHAPI.scala file split finished, SSHAPI.scala file deleted
 - imports cleaned up, source file copyright & license header added
 - fix : ls on an empty directory was returning a collection containing an empty string
 - fix : SSHFtp.receive was not flushing...  receiveNcompress was broken with SSHFtp, now it is OK.
 - fix : break on timeout may block. resultsQueue.poll with timeout instead of a forever resultsQueue.take
 - new method in TransfertOperations : putFromStream(data: java.io.InputStream, howmany:Int, remoteDestination: String)
 - jsch 0.1.50
 - sbteclipse-plugin 2.2.0
 - scala 2.10.2
 - sbt assembly 0.9.0
 
------------------------------------------------------------------
0.9.9 (2013-05-09)

 - scala 2.10.1
 - scalalogging 1.0.1
 - sbt assembly 0.8.8
 - sbt eclipse 2.1.2
 - removing parenthesis to cd to allow executing "cd" to go back to home directory
 - SSHExec timeout implemented BUT not yet clean
    + SSHTimeoutException class added
 - receiveNcompress method added to TransfertOperations (gz)